--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 	<title>Grayscale - Start Bootstrap</title>
 </head>
 <body>
-<nav id="menu">
-	<ul>
-	<li id="1">start Bootstrap</li>
-	<li>About</li>
-	<li>Projects</li>
-	<li>Contact</li>
-	</ul>
-</nav>
-<div id="montanha">
-<img src="_imagens/fundo-montanha.jpg" id="fundo"/>
-	<h1>GRAYSCALE<h1>
-	<h2>A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-	<h3 id="botao-start">GET STARTED</h3>
+	<nav id="menu">
+		<ul>
+			<li>start Bootstrap</li>
+			<li>About</li>
+			<li>Projects</li>
+			<li>Contact</li>
+		</ul>
+	</nav>
+	<div id="montanha">
+		<img src="_imagens/fundo-montanha.jpg" id="fundo"/>
+		<h1>GRAYSCALE<h1>
+		<h2>A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
+		<h1 id="botao">GET STARTED</h1>
 	
-</div>
+	</div>
 
 
 
