alterações de CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<nav id="menu">
 		<ul>
-			<li>start Bootstrap</li>
+			<li>Start Bootstrap</li>
 			<li>About</li>
 			<li>Projects</li>
 			<li>Contact</li>
@@ -16,7 +16,7 @@
 	</nav>
 	<div id="montanha">
 		<img src="_imagens/fundo-montanha.jpg" id="fundo"/>
-		<h1>GRAYSCALE<h1>
+		<h1 id="flutuante">GRAYSCALE<h1>
 		<h2>A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
 		<h1 id="botao">GET STARTED</h1>
 	
