--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 	<nav id="menu">
 		<ul>
-			<li>Start Bootstrap</li>
-			<li>About</li>
-			<li>Projects</li>
-			<li>Contact</li>
+			<li><a href="index.html">Bootstrap</a></li>
+			<li><a href="about.html.txt">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 	<div id="montanha">
