--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
 	<title>Grayscale - Start Bootstrap</title>
 </head>
 <body>
-	<nav id="menu">
+<nav id="menu">
 		<ul>
 			<li><a href="index.html">Bootstrap</a></li>
 			<li><a href="about.html.txt">About</a></li>
 			<li><a href="projects.html">Projects</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
-	</nav>
+</nav>
 	<div id="montanha">
 		<img src="_imagens/fundo-montanha.jpg" id="fundo"/>
 		<h1 id="flutuante">GRAYSCALE<h1>
 		<h2>A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-		<h1 id="botao">GET STARTED</h1>
-	
+		<a href="contact.html"><h1 id="botao">GET STARTED</h1></a>
 	</div>
+<div id="corpo">  
+
+	<h2>Built with Bootstrap 4</h2>
+	<p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on <a id="preview" href="projects.html">the preview page</a> . The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+
+
+</div>
 
 
 
