--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav id="menu">
 		<ul>
 			<li><a href="index.html">Bootstrap</a></li>
-			<li><a href="about.html.txt">About</a></li>
+			<li><a href="about.html">About</a></li>
 			<li><a href="projects.html">Projects</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
