--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<title>Grayscale - Start Bootstrap</title>
 </head>
 <body>
-<header>
+<div>
+<header id="cabecalho">
 	<nav id="menu">
 		<ul>
 			<li><a href="index.html">Bootstrap</a></li>
@@ -25,11 +26,6 @@
 
 	<h2>Built with Bootstrap 4</h2>
 	<p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on <a id="preview" href="projects.html">the preview page</a> . The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-
-
-
-
-
-
+</div>
 </body>
 <html>
