teste alteração background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Grayscale - Start Bootstrap</title>
 </head>
 <body>
-<div>
+<div id="fundo">
 <header id="cabecalho">
 	<nav id="menu">
 		<ul>
@@ -17,7 +17,6 @@
 		</ul>
 	</nav>
 </header>
-		<img src="_imagens/fundo-montanha.jpg" id="fundo"/>
 		<h1 id="flutuante">GRAYSCALE</h1>
 		<h2>A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
 		<a href="contact.html"><h1 id="botao">GET STARTED</a>
