--- a/index.html
+++ b/index.html
@@ -1,30 +1,12 @@
+
 <!DOCTYPE html>
-<html>
-<head lang="pt-br">
-	<meta charset="UTF-8"/>
-	<link rel="stylesheet" href="_css/estilo.css"/>
-	<title>Grayscale - Start Bootstrap</title>
+<html lang="en">
+<head>
+	<link hel="stylesheet" type="text/css" href="_css/estilo.css" 
+	<meta charset="UTF-8">
+	<title>Site</title>
 </head>
 <body>
-<div id="fundo">
-<header id="cabecalho">
-	<nav id="menu">
-		<ul>
-			<li><a href="index.html">Bootstrap</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="projects.html">Projects</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-</header>
-		<h1 id="flutuante">GRAYSCALE</h1>
-		<h2>A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-		<a href="contact.html"><h1 id="botao">GET STARTED</a>
-
-
-
-	<h2>Built with Bootstrap 4</h2>
-	<p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on <a id="preview" href="projects.html">the preview page</a> . The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-</div>
+	
 </body>
-<html>
+</html>
